# pantr

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  coverage.toml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.cursor/rules/: scientific-python.mdc
.github/workflows/: ci.yaml  ci.yml
.pre-commit-hooks/: conditional_check.py
docs/: Makefile  changelog.md  conf.py  getting-started.md  index.md  requirements.txt
docs/api/: reference.md
src/pantr/: __init__.py  _basis_1D.py  _basis_core.py  _basis_impl.py  _basis_lagrange.py  _basis_multidim.py  _basis_utils.py  _bspline_1D_impl.py  _bspline_basis_core.py  _bspline_basis_multidim.py  _bspline_extraction.py  _bspline_knots.py  _bspline_space_1D_impl.py  _bspline_space_impl.py  basis.py  bspline.py  bspline_1D.py  bspline_space.py  bspline_space_1D.py  change_basis.py  change_basis_1D.py  knots.py  quad.py  tolerance.py
tests/: __init__.py  conftest.py  test_basis.py  test_bspline.py  test_bspline_1D.py  test_bspline_space.py  test_bspline_space_1D.py  test_cardinal_bspline.py  test_cardinal_bspline_1D.py  test_change_basis_1D.py  test_knots.py  test_knots_1D.py  test_lagrange.py  test_lagrange_1D.py  test_legendre_1D.py  test_metadata.py  test_quad.py  test_tolerance.py
